# svc-matching-engine

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: test.yaml.txt
bench/: README.md  k6_publish_orders.js
docs/: runbook.md
k8s/: configmap-clickhouse-ddl.yaml  deployment.yaml  externalsecret.yaml  grafana-dashboard-cm.yaml  job-ch-ddl-apply.yaml  keda-scaledobject.yaml  networkpolicy.yaml  pdb.yaml  priorityclass.yaml  prometheusrule.yaml  servicemonitor.yaml
k8s/base/: deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  priorityclass.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/stg/: kustomization.yaml
src/: config.rs  db.rs  kafka.rs  main.rs  matching.rs  metrics.rs  util.rs
