[package]
name = "svc-matching-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.36", features = ["cmake-build", "tokio", "ssl", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clickhouse = "0.11"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
prometheus = "0.13"
lazy_static = "1.4"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
