[package]
name = "svc-matching-engine"
version = "0.1.0"
edition = "2021"
authors = ["daeun-ops <sophie@2025-demo-01>"]
description = "High-performance Matching Engine service for crypto exchange (Binance-style 24/365 infra demo)"
license = "MIT"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal"] }
rdkafka = { version = "0.36", features = ["tokio", "cmake-build"] }
clickhouse = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
once_cell = "1.19"
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"

#  로컬 개발 시 
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
